components/explore/explore.module.scss
@import "../../styles/_vars.sass";
.explore__list {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 8px;
  margin-left: -24px;
  max-width: 616px;
}
.explore__list__center {
  display: flex;
  justify-content: center;
  width: 100%;
}
.explore__list__item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-bottom: 1px solid transparent;
  color: var(--text-shade);
  font-family: "DMSans";
  cursor: pointer;
  font-size: 16px;

  font-style: normal;
  font-weight: bold;
  line-height: 24px; /* 150% */
  letter-spacing: -0.16px;
  .explore__container__img {
    width: 28px;
    height: 22px;
  }
  img {
    margin-right: 8px;
    filter: invert(0);
    // width: 20px;
  }
  
}
.explore__list__item__active {
  border-bottom: 1px solid $green !important;
  color: var(--text-main) !important;
  img {
    margin-right: 8px;
    filter: invert(1) !important;
  }
}
.profile__follow {
  width: 100%;
  height: 48px;
  background: transparent !important;
  font-weight: 400 !important;
  border-radius: 100px;
  border: 1px solid $green;
  color: var(--text-main);
}
.profile__unfollow {
  width: 100% !important;
  height: 48px !important;
}
.explore {
  margin-top: 32px;
  width: 616px;
  @media (max-width: 616px) {
    width: calc(100%);
    margin-top: 24px;
  }
}
.explore__swipe {
  position: absolute;
  margin-left: 555px;
}
.explore__title {
  color: var(--text-main);
  margin-bottom: 24px;
  /* Header/H2 */
  font-family: Syne;
  overflow: hidden;
  font-size: 48px;
  font-style: normal;
  font-weight: 700;
  line-height: 56px; /* 116.667% */
  letter-spacing: -0.96px;
  @media (max-width: 616px) {
    font-size: 32px;
    margin-bottom: 16px;
  }
}
.explore__users__row {
  display: flex;
  overflow-x: auto;
  align-items: center;
  justify-content: space-between;
  overflow-y: hidden;
}
.explore__users__wrapper {
  width: 100%;
  overflow: hidden;
  margin-bottom: 24px;
}
.explore__topuser {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: 8px;
  margin-right: 8px;
  color: var(--text-shade);
  text-align: center;
  font-family: "DMSans";
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  overflow: hidden;
  line-height: 20px; /* 142.857% */
  letter-spacing: -0.14px;
  white-space: nowrap;
  img {
    margin-bottom: 8px;
    border-radius: 100%;
    width: 64px;
    height: 64px;
  }
}
.explore__types__row {
  margin-top: 16px;
  margin-bottom: 16px;
}
.feed__type {
  color: var(--text-shade);
  text-align: center;
  font-family: "DMSans";
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: -0.14px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100px;
  height: 36px;
  padding-left: 16px;
  padding-right: 16px;
  margin-right: 8px;
  cursor: pointer;
  @media (max-width: 600px) {
  }
}
.explore__type {
  color: var(--text-shade);
  text-align: center;
  font-family: "DMSans";
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  letter-spacing: -0.14px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100px;
  height: 36px;
  padding-left: 16px;
  padding-right: 16px;
  margin-right: 8px;
  cursor: pointer;
}
.explore__active {
  background: var(--hover) !important;
  color: var(--text-main) !important;
  font-weight: bold !important;
}
.explore__users__col {
  padding: 24px;
  border-radius: 32px;
  background: var(--background-pages);
  @media (max-width: 616px) {
    padding: 12px;
  }
}
.explore__user {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 16px;
  padding: 8px 16px;
  margin-bottom: 16px;
  transition: 500ms ease all;
  background: var(--background-row);
  &:hover {
    background: var(--hover);
  }
}
.explore__user__left {
  display: flex;
  align-items: center;
  img {
    width: 40px;
    border-radius: 100%;
    height: 40px;
  }
}
.explore__user__share {
  display: flex;
  align-items: center;
  color: var(--text-shade);
  font-family: "DMSans";
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 18px; /* 150% */
  letter-spacing: -0.12px;
  img {
    width: 24px;
    height: 24px;
  }
  div {
    border-radius: 100px;
    background: var(--Black-6, var(--hover));
    padding-left: 8px;
    padding-right: 8px;
  }
}
.explore__user__balance__usd {
  color: var(--text-shade);
  text-align: right;
  font-family: "DMSans";
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 18px; /* 150% */
  letter-spacing: -0.12px;
}
.explore__user__left__text {
  margin-left: 8px;
}
.explore__user__price {
  display: flex;
  align-items: center;
  color: var(--text-main);
  cursor: pointer;
  font-family: "DMSans";
  font-size: 16px;
  font-style: normal;
  font-weight: bold;
  line-height: 24px; /* 150% */
  letter-spacing: -0.16px;
  overflow: hidden;
}
.explore__user__name {
  display: flex;
  align-items: center;

  color: var(--text-main);
  cursor: pointer;
  font-family: "DMSans";
  font-size: 16px;
  font-style: normal;
  font-weight: bold;
  line-height: 24px; /* 150% */
  letter-spacing: -0.16px;
  overflow: hidden;
  div {
    color: var(--text-main);
    &:hover {
      text-decoration: underline;
    }
  }
  a {
    margin-left: 4px;
    font-size: 14px;
    font-family: "DMSans";
    font-weight: 400;
    color: var(--text-shade);
    &:hover {
      text-decoration: underline;
    }
  }
  @media (max-width: 616px) {
    flex-direction: column;
    align-items: flex-start;
    a {
      margin-left: 0px;
    }
  }
}
.explore__search__active {
  border: 1px solid $green !important;
}
.explore__search {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid var(--border);
  height: 56px;
  border-radius: 16px;
  background: var(--background-pages);
  input {
    width: 100%;
    height: 100%;
    color: var(--text-main);
    background: var(--background-pages);
    font-family: "DMSans";
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    border-radius: 16px;
    outline: none;
    border: none;
    &::placeholder {
      color: var(--text-shade);
    }
  }
  img {
    margin-left: 16px;
    margin-right: 10px;
  }
}
.presale__list {
  display: flex;
  flex-direction: column;
  margin-top: 24px;
  width: 952px;
  @media (max-width: 616px) {
    width: calc(100%);
    margin-top: 24px;
  }
}
.presale__table__row {
  color: var(--text-main);
  font-family: "DMSans";
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  height: 65px;
  line-height: 20px; /* 142.857% */
  letter-spacing: -0.14px;
  display: flex;
  align-items: center;
  justify-content: space-between;
 
}
.presale__table__head {
  color: var(--text-main);
  font-family: "DMSans";
  font-size: 14px;
  font-style: normal;
  font-weight: bold;
  line-height: 20px; /* 142.857% */
  letter-spacing: -0.14px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 53px;
}
.presale__table {
  background-color: var(--background-pages);
  width: 100%;
  padding: 24px;
  border-radius: 32px;
  .row__1 {
    width: 81px;
    img {
      width: 40px;
      height: 40px;
      border-radius: 100%;
    }
  }
  .row__2 {
    width: 141px;
  }
  .row__3 {
    width: 158px;
  }
  .row__4 {
    width: 98px;
  }
  .row__5 {
    width: 138px;
  }
  .row__6 {
    width: 84px;
    a {
      color: var(--text-main);
    }
  }
  .row__7 {
    width: 126px;
  }
  .row__8 {
    width: 71px;
    color: #5D5FEF!important;
    text-decoration: none;
    cursor: pointer;
    &:hover {
      text-decoration: underline;
    }
  }
}

